<resources>
    <string name="input_usuario">Rut o usuario</string>
    <string name="input_password">Password</string>
    <string name="input_button">Entrar</string>
    <string name="title_activity_login_new">LoginActivityNew</string>
    <string name="titulo_info">Conductor </string>
    <string name="cantidad_viajes">Viajes del dia:</string>
    <string name="nuevo_servicio">Nuevo servicio</string>
    <string name="viaje_inicio">Origen</string>
    <string name="viaje_destino">Destino</string>
    <string name="viaje_contacto">Llamar</string>
    <string name="viaje_tipo">Tipo</string>
    <string name="app_name">Conductor</string>
    <string name="contentDescriptionLogo">Logo Principal</string>
    <string name="recordarme">Recordarme</string>
    <string name="datos_viaje">¿A dónde se dirige?</string>
    <string name="origen">Origen</string>
    <string name="destino">Destino</string>
    <string name="confirmar_viaje">Solicitar</string>
    <string name="cancelar_viaje">Cancelar</string>
    <string name="title_activity_asignar_servicio">AsignarServicioActivity</string>
    <string name="punto_partida">Ingrese punto de partida</string>
    <string name="punto_destino">Ingrese punto de destino</string>
    <string name="descripcionImagenMenu">imagen de menu</string>
    <string name="descripcionImagenAtras">imagen atras</string>
    <string name="api_key">AIzaSyDzk5KMW7MRXU2HUqXUSyCgGlCwib1nTu8</string>
    <string name="solicitar">Solicitar</string>
    <string name="confirmar">Confirmar</string>
    <string name="solicitando_viaje">Solicitando Viaje</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="error_internet">No se pudo acceder a la red</string>
    <string name="sel_mapa">Selecciona en el mapa</string>
    <string name="titulo_barra">GoTransfer</string>
    <string name="title_activity_servicio">ServicioActivity</string>
    <string name="title_activity_historico">HistoricoActivity</string>
    <string name="title_activity_servicio_detalle">ServicioDetalleActivity</string>
    <string name="title_activity_servicio_especial">ServicioEspecialActivity</string>
    <string name="title_activity_produccion">ProduccionActivity</string>
    <string name="title_activity_descuento">DescuentoActivity</string>
    <string name="title_activity_fin_servicio">FinServicioActivity</string>
    <string name="title_activity_pasajero">PasajeroActivity</string>
    <string name="title_activity_historico_detalleactivity">HistoricoDetalleactivity</string>

</resources>
